src/test/deca/syntax/valid/true.deca
// Description:
//    Test de true
//
// Resultats:
//    
//


{
    print(true);
}
