src/test/deca/syntax/invalid/println_incomplete.deca
// Description:
//   println icomplet: sans parenthèse
//
// Resultats:
//    Ligne 9 : missing ')' at ';'
// 

{
        println(;
}
